# kohaku

./: .gitignore  1040-HERMES-CATHEDRAL-ANALYSIS.md  Cargo.toml  arkhe_android_os.py  cathedral_evolution_engine.py  cathedral_immortality_protocol.py  cathedral_omniscient_interface.py  cathedral_pentest_suite.py  cathedral_unified_nexus.py  decree_989_consolidated.md  deploy.sh  fair_metrics_dashboard.py  fair_report_consolidated.json  fair_report_consolidated.md  hermes_cathedral_bridge.py  manifesto_expansao_omnisciente.md  octra_service.py  package-lock.json  package.json  permaweb_bridge.py  run_tests.sh  setup_path.sh  substrate_registry.yaml  test_arkhe_android_os.py  test_permaweb_bridge.py  unified_orchestrator.py
arkhe-os/: Cargo.toml  Makefile
arkhe-os/boot/: bootloader.asm  bootloader.ld
arkhe-os/kernel/: Cargo.toml  x86_64-arkhe_os.json
arkhe-os/kernel/src/: axiarchy.rs  ipc.rs  isolation.rs  main.rs  memory.rs  scheduler.rs  syscalls.rs  temporal.rs
arkhe-os/libs/arklib/: Cargo.toml
arkhe-os/libs/arklib/src/: lib.rs
arkhe-os/libs/ipfs/: Cargo.toml
arkhe-os/libs/nostr/src/: lib.rs
arkhe-os/libs/pqc/: Cargo.toml
arkhe-os/libs/pqc/src/: lib.rs
arkhe-os/libs/tor/: Cargo.toml
arkhe-os/servers/bindu/: Cargo.toml
arkhe-os/servers/bindu/src/: main.rs
arkhe-os/servers/net/: Cargo.toml
arkhe-os/servers/net/src/: main.rs
arkhe-os/servers/orchestrator/: Cargo.toml
arkhe-os/servers/orchestrator/src/: main.rs
arkhe-os/servers/passport/: Cargo.toml
arkhe-os/servers/vfs/: Cargo.toml
arkhe-os/tools/checkpoint/: Cargo.toml
(+77 files in other folders)
